--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   file_picker: ^8.1.2
   url_launcher: ^6.3.1
   video_player: ^2.6.0
+  emoji_picker_flutter: ^2.0.0
   # just_audio: ^0.9.37
   # video_player: ^2.8.3
   http: ^1.5.0
